--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>SIT 725 Prac 4</title>
-    <meta name="description" content="basic template for SIT 725 Prac 4">
+    <meta name="description" content="basic template for SIT 725 Prac MVC">
     <meta name="author" content="SitePoint">
 
     <meta property="og:title" content="SIT 725 Prac 4">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="basic template for SIT 725 Prac 4">
+    <meta property="og:description" content="basic template for SIT 725 Prac MVC">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 center-align">
-                    <h1 id="heading">Welcome to SIT 725 Week 4</h1>
+                    <h1 id="heading">Welcome to SIT 725 prac MVC</h1>
                     <p class="flow-text">This is a demo application that tries to use a few components from materialize
                         and through this practical we try to have some fun with Materialize and its components</p>
                 </div>
